Adding labels to the input fields

--- a/SampleWeb/wwwroot/index.html
+++ b/SampleWeb/wwwroot/index.html
@@ -5,8 +5,8 @@
 <body>
 
     <div>
-        User Name: <input type="text" id="userName" /><br />
-        Org ID: <input type="text" id="orgID" /><br />
+        User Name ("ad", "hr", "bad", or something else): <input type="text" id="userName" /><br />
+        Org ID (integer): <input type="text" id="orgID" /><br />
         <input type="button" onclick="logIn()" value="Log In" />
     </div>
     <hr />
